[package]
name = "silver-light-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Light client implementation for SilverBitcoin blockchain"

[dependencies]
silver-core = { path = "../silver-core" }
silver-crypto = { path = "../silver-crypto" }
silver-storage = { path = "../silver-storage" }
silver-network = { path = "../silver-network" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
blake3 = "1.5"
hex = "0.4"
rand = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
jsonrpsee = { workspace = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { workspace = true }

# Time
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
